hphp/test/slow/use_namespace_class/namespace_no_class.php.expectf
int(5)

Fatal error: Failure to resolve undefined class bar in %s/namespace_no_class.php on line 22
